# image-processing-package-ferreedu

./: README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_image_processing.py
