[project]
name = "image-processing-package-ferreedu"
version = "0.1.0"
description = ""
authors = [
    {name = "Eduardo da Silva Ferreira",email = "eduardo.s.fereira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bleach",
    "certifi",
    "chardet",
    "colorama",
    "docutils",
    "idna",
    "keyring",
    "packaging",
    "pkginfo",
    "pygments",
    "pyparsing",
    "requests",
    "rfc3986",
    "six",
    "tqdm",
    "twine",
    "urllib3",
    "webencodings",
    "requests-toolbelt"
]

[tool.poetry]
packages = [{include = "image_processing_package_ferreedu", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
